# libsignal

./: Cargo.toml
java/java/src/main/java/org/signal/internal/: Native.java
java/java/src/main/java/org/whispersystems/libsignal/state/: SessionRecord.java
node/: Native.d.ts  index.ts
node/test/: PublicAPITest.ts
rust/bridge/ffi/src/: lib.rs  util.rs
rust/bridge/jni/src/: lib.rs
rust/bridge/shared/: Cargo.toml
rust/bridge/shared/src/: lib.rs  protocol.rs
rust/bridge/shared/src/ffi/: mod.rs  storage.rs
rust/bridge/shared/src/jni/: convert.rs  mod.rs  storage.rs
rust/bridge/shared/src/node/: storage.rs
rust/bridge/shared/src/support/: mod.rs
rust/device-transfer/src/: lib.rs
rust/protocol/: Cargo.toml
rust/protocol/benches/: ratchet.rs  session.rs
rust/protocol/internal/: Cargo.toml
rust/protocol/internal/src/: lib.rs
rust/protocol/src/: address.rs  consts.rs  crypto.rs  curve.rs  error.rs  fingerprint.rs  group_cipher.rs  identity_key.rs  kdf.rs  lib.rs  proto.rs  protocol.rs  ratchet.rs  sealed_sender.rs  sender_keys.rs  session.rs  session_cipher.rs  state.rs  storage.rs  utils.rs
rust/protocol/src/curve/: curve25519.rs
rust/protocol/src/proto/: sealed_sender.proto  storage.proto  wire.rs
rust/protocol/src/ratchet/: keys.rs  params.rs
rust/protocol/src/state/: bundle.rs  prekey.rs  session.rs  signed_prekey.rs
rust/protocol/src/storage/: inmem.rs  traits.rs
rust/protocol/tests/: groups.rs  ratchet.rs  sealed_sender.rs  session.rs
rust/protocol/tests/support/: mod.rs
swift/Sources/SignalFfi/: signal_ffi.h
