[package]
name = "internal"
version = "0.1.0"
authors = ["Danny McClanahan <1305167+cosmicexplorer@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subtle = "2.2.3"

[dev-dependencies]
rand = "0.7.3"
